--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,20 +1,22 @@
-* {
+{
     margin: 0;
     padding: 0;
 }
-.container {
+.container1 {
     display: grid;
-    grid-template-rows: 3rem 50rem 3rem;
+    grid-template-rows: 4rem 50rem 4rem;
     grid-template-columns: 10rem 1fr;
     grid-template-areas:
        'header header header'
        'sidebar content content'
        'footer footer footer';
 }
+
 .header {
     grid-area: header;
-    background-color: #faf4ed;
+    background-color: #cecacd;
 }
+
 .menu   {
     display: flex;
     flex-direction: row-reverse;
@@ -22,34 +24,32 @@
     border: 2rem;
     flex-grow: 2;
 }
-.menu a{
-    text-decoration: none;
-    margin:15px;
-    text-align:center;
-    font-family: 'Playfair Display SC', serif;
-}
+
 .footer {
     grid-area: footer;
     text-align: center;
     padding: 1rem;
-    font-family: 'Playfair Display SC', serif;
-    background-color: #faf4ed;
+    font-family:'Merriweather', serif;
+    background-color: #cecacd;
+    text-decoration: underline;
+    color: #286983;
 }
+
 .sidebar  {
     grid-area: sidebar;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     padding: 0.5rem;
-    background-color: #faf4ed;
+    background-color: #cecacd;
 }
     
 .content {
     grid-area: content;
     font-size: large;
     padding: 5rem;
-    font-family: 'Luckiest Guy', cursive;
-    background-color: #f2e9de;
+    background-color: #f4ede8;
+    font-family: 'Kanit', sans-serif;;
 }
 .bt {
     border: 0;
@@ -57,37 +57,61 @@
     border-radius: 10px;
     font-size: 1.5rem;
     padding: 0 20px;
-    background-color: #e0def4;
-}
-a:link,a:visited  {
-    list-style: none;
-    text-decoration: none;
-    color:#524f67;
+    background-color: #cecacd;
+    color: #286983;
 }
 
-.bt:hover {
-    background-color: #eb6f92;
-    text-decoration: underline;
-}
-.bt2 {
-    border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1.5rem;
+.slbuttonclose1  {
     text-align: center;
-    border-radius: 10px;
-    background-color: #e0def4;
 }
-.bt2:hover {
-    background-color: #eb6f92;
-    text-decoration: underline;
+
+.sidemenu   {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    list-style: none;
 }
+    
 .nlist  {
     height: 20px;
     text-align: center;
     font-size: 20px;
-    width: 100px;
+    width: 120px;
+    margin-top: 20px;
+    font-family: 'Merriweather', serif;
+    color:#286983
 }
-.slbuttonclose1 {
-    text-align: center;
+    
+.addnotes   {
+    width: 800px;
+    height: 300px;   
 }
+a:link{
+    list-style: none;
+    text-decoration: none;
+    color:#286983
+}
+
+a:hover,a:visited,a:active{
+    color:#286983;
+    text-decoration: underline;
+
+}
+
+.bt:hover {
+    background-color: #b4637a;
+    color:#286983;
+    text-decoration: underline;
+}
+
+textarea {
+    font-size: 2rem;
+    letter-spacing: 1px;
+    padding: 8px;
+    line-height: 1;
+    border-radius: 4px;
+    border: 1px solid;
+    box-shadow: 1px 1px 1px;
+    background-color: #faf4ed;
+}
+
